feat：健康检查功能添加
